--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
           /></a>
           <a href="https://www.linkedin.com/company/take-1-code-club"
             ><img
-              src="/images/linkedin-logo-png-1825.png"
+              src="./images/linkedin-logo-png-1825.png"
               alt="linkedin"
               width="100"
               style="padding: 0px 10px 0px 10px"
